--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     </div> -->
 
     <div class="container">
-    <img src="https://i.pinimg.com/originals/7e/5b/9f/7e5b9fed05ce8c6efe9cd25adf78a9f4.png" id="toggleImage" onclick="showfood();"/>
-    <img src="icon1.png" alt="Bhutan">
-    <img src="icon1.png" alt="Bhutan">
-    <img src="icon1.png" alt="Bhutan">
-    <img src="icon1.png" alt="Bhutan">
-    <img src="icon1.png" alt="Bhutan">
-    <img src="icon1.png" alt="Bhutan">
-    <img src="icon1.png" alt="Bhutan">
-    <img src="icon1.png" alt="Bhutan">
+    <img src="Icons/Burger_clicked.png" id="toggleImage" onclick="showfood();"/>
+    <img src="Icons/Joystick.png" alt="Bhutan">
+    <img src="Icons/Benzin.png" alt="Bhutan">
+    <img src="Icons/Cafe.png" alt="Bhutan">
+    <img src="Icons/Gym.png" alt="Bhutan">
+    <img src="Icons/Pharmacy.png" alt="Bhutan">
+    <img src="Icons/Burger.png" alt="Bhutan">
+    <img src="Icons/Burger.png" alt="Bhutan">
+    <img src="Icons/Burger.png" alt="Bhutan">
     </div>
 
 <script>
