--- a/index.html
+++ b/index.html
@@ -25,15 +25,12 @@
     </div> -->
 
     <div class="container">
-    <img src="Icons/Burger_clicked.png" id="toggleImage" onclick="showfood();"/>
-    <img src="Icons/Joystick.png" alt="Bhutan">
-    <img src="Icons/Benzin.png" alt="Bhutan">
-    <img src="Icons/Cafe.png" alt="Bhutan">
-    <img src="Icons/Gym.png" alt="Bhutan">
-    <img src="Icons/Pharmacy.png" alt="Bhutan">
-    <img src="Icons/Burger.png" alt="Bhutan">
-    <img src="Icons/Burger.png" alt="Bhutan">
-    <img src="Icons/Burger.png" alt="Bhutan">
+    <img src="Burger_clicked.png" id="toggleImage" onclick="showfood();"/>
+    <img src="Joystick.png" alt="Bhutan">
+    <img src="Benzin.png" alt="Bhutan">
+    <img src="Cafe.png" alt="Bhutan">
+    <img src="Gym.png" alt="Bhutan">
+    <img src="Pharmacy.png" alt="Bhutan">">
     </div>
 
 <script>
