--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
     </div> -->
 
     <div class="container">
-    <img src="Burger_clicked.png" id="toggleImage" onclick="showfood();"/>
-    <img src="Joystick.png" alt="Bhutan">
-    <img src="Benzin.png" alt="Bhutan">
-    <img src="Cafe.png" alt="Bhutan">
-    <img src="Gym.png" alt="Bhutan">
-    <img src="Pharmacy.png" alt="Bhutan">">
+    <img src="Burger.png">
+    <img src="Joystick.png" >
+    <img src="Benzin.png" >
+    <img src="Cafe.png" >
+    <img src="Bank.png" >
+    <img src="Gym.png" >
+    <img src="Pharmacy.png" >
+    <img src="Shop.png" >
     </div>
 
 <script>
