--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="container">
     <img src="Burger.png">
-    <img src="Joystick.png" >
+    <img src="Joystick_clicked.png" >
     <img src="Benzin.png" >
     <img src="Cafe.png" >
     <img src="Bank.png" >
