--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <div class="UI">
 
 <div class="container">
-    <img class="Icons" src="Burger.png">
-    <img class="Icons" src="Joystick.png" >
+    <img class="Icons" id="Burger" src="Burger.png" onclick="change_image('Burger')">
+    <img class="Icons" id = "Joystick" src="Joystick.png" onclick="change_image('Joystick')">
     <img class="Icons" src="Benzin.png" >
     <img class="Icons" src="Cafe.png" >
     <img class="Icons" src="Bank.png" >
