--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <div class="UI">
 
 <div class="container">
-    <img class="Icons" id="Burger" src="Burger.png" onclick="change_image('Burger')">
-    <img class="Icons" id = "Joystick" src="Joystick.png" onclick="change_image('Joystick')">
-    <img class="Icons" src="Benzin.png" >
-    <img class="Icons" src="Cafe.png" >
-    <img class="Icons" src="Bank.png" >
-    <img class="Icons" src="Gym.png" >
-    <img class="Icons" src="Pharmacy.png" >
-    <img class="Icons" src="Shop.png" >
+    <img class="Icons" id="Burger" src="https://haykbaghdasarian.github.io/Burger.png" onclick="change_image('Burger')">
+    <img class="Icons" id = "Joystick" src="https://haykbaghdasarian.github.io/Joystick.png" onclick="change_image('Joystick')">
+    <img class="Icons" src="https://haykbaghdasarian.github.io/Benzin.png" id="Benzin" onclick="change_image('Benzin')">
+    <img class="Icons" src="https://haykbaghdasarian.github.io/Cafe.png" id="Cafe" onclick="change_image('Cafe')">
+    <img class="Icons" src="https://haykbaghdasarian.github.io/Bank.png" id="Bank" onclick="change_image('Bank')">
+    <img class="Icons" src="https://haykbaghdasarian.github.io/Gym.png" id="Gym" onclick="change_image('Gym')">
+    <img class="Icons" src="https://haykbaghdasarian.github.io/Pharmacy.png" id="Pharmacy" onclick="change_image('Pharmacy')">
+    <img class="Icons" src="https://haykbaghdasarian.github.io/Shop.png" id="Shop" onclick="change_image('Shop')">
 </div>
 
 
