--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 <div class="UI">
 
+    <img src="https://haykbaghdasarian.github.io/Burger.png" class="left" alt="">
+
+    <img src="https://haykbaghdasarian.github.io/Burger.png" class="right" alt="">
+
 <div class="container">
     <img class="Icons" id="Burger" src="https://haykbaghdasarian.github.io/Burger.png" onclick="change_image('Burger')">
     <img class="Icons" id = "Joystick" src="https://haykbaghdasarian.github.io/Joystick.png" onclick="change_image('Joystick')">
@@ -27,6 +31,7 @@
 
 
 </div>
+
 
 
 
