--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 
     <img src="https://haykbaghdasarian.github.io/Burger.png" class="right" alt="">
 
+    
+
+    <div class="bottom1">
+        <img src="https://image.freepik.com/free-vector/tablet-capsule-medicine-icon-illustration-healthcare-medical-icon-concept-isolated_138676-882.jpg" class="imgmgmg" alt="">
+        <h1 >Pharmacy</h1>
+        <p>Working Time: 14:00-18:00</p>
+        <p>Distance: 750m From You</p>
+        <button class="getdirection"><h1>Get Direction</h1></button>
+    </div>
+
 <div class="container">
     <img class="Icons" id="Burger" src="https://haykbaghdasarian.github.io/Burger.png" onclick="change_image('Burger')">
     <img class="Icons" id = "Joystick" src="https://haykbaghdasarian.github.io/Joystick.png" onclick="change_image('Joystick')">
