--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         <h1 >Pharmacy</h1>
         <p>Working Time: 14:00-18:00</p>
         <p>Distance: 750m From You</p>
+        <div class="bottomcont">
+            <button class="close"><h1>Close</h1></button>
         <button class="getdirection"><h1>Get Direction</h1></button>
+        
+    </div>
     </div>
 
 <div class="container">
