--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="UI">
 
-    <img src="https://haykbaghdasarian.github.io/Burger.png" class="left" alt="">
+    <!-- <img src="https://haykbaghdasarian.github.io/Burger.png" class="left" alt="">
 
     <img src="https://haykbaghdasarian.github.io/Burger.png" class="right" alt="">
 
@@ -26,7 +26,7 @@
         <p>Working Time: 14:00-18:00</p>
         <p>Distance: 750m From You</p>
         <button class="getdirection"><h1>Get Direction</h1></button>
-    </div>
+    </div> -->
 
 <div class="container">
     <img class="Icons" id="Burger" src="https://haykbaghdasarian.github.io/Burger.png" onclick="change_image('Burger')">
