--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 
 <div class="UI">
 
-    <!-- <img src="https://haykbaghdasarian.github.io/Burger.png" class="left" alt="">
+    <img src="https://haykbaghdasarian.github.io/Menu.png" class="left" alt="">
 
-    <img src="https://haykbaghdasarian.github.io/Burger.png" class="right" alt="">
+    <img src="https://haykbaghdasarian.github.io/Locate.png" class="right" alt="">
 
     
 
-    <div class="bottom1">
+    <!-- <div class="bottom1">
         <img src="https://image.freepik.com/free-vector/tablet-capsule-medicine-icon-illustration-healthcare-medical-icon-concept-isolated_138676-882.jpg" class="imgmgmg" alt="">
         <h1 >Pharmacy</h1>
         <p>Working Time: 14:00-18:00</p>
         <p>Distance: 750m From You</p>
         <button class="getdirection"><h1>Get Direction</h1></button>
-    </div> -->
+    </div>  -->
 
 <div class="container">
     <img class="Icons" id="Burger" src="https://haykbaghdasarian.github.io/Burger.png" onclick="change_image('Burger')">
@@ -34,7 +34,7 @@
     <img class="Icons" src="https://haykbaghdasarian.github.io/Benzin.png" id="Benzin" onclick="change_image('Benzin')">
     <img class="Icons" src="https://haykbaghdasarian.github.io/Cafe.png" id="Cafe" onclick="change_image('Cafe')">
     <img class="Icons" src="https://haykbaghdasarian.github.io/Bank.png" id="Bank" onclick="change_image('Bank')">
-    <img class="Icons" src="https://haykbaghdasarian.github.io/Gym.png" id="Gym" onclick="change_image('Gym')">
+    <img class="Icons" src="D:\illustrator\Exports\1x\Gym.png" id="Gym" onclick="change_image('Gym')">
     <img class="Icons" src="https://haykbaghdasarian.github.io/Pharmacy.png" id="Pharmacy" onclick="change_image('Pharmacy')">
     <img class="Icons" src="https://haykbaghdasarian.github.io/Shop.png" id="Shop" onclick="change_image('Shop')">
 </div>
