--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <img class="Icons" src="https://haykbaghdasarian.github.io/Benzin.png" id="Benzin" onclick="change_image('Benzin')">
     <img class="Icons" src="https://haykbaghdasarian.github.io/Cafe.png" id="Cafe" onclick="change_image('Cafe')">
     <img class="Icons" src="https://haykbaghdasarian.github.io/Bank.png" id="Bank" onclick="change_image('Bank')">
-    <img class="Icons" src="D:\illustrator\Exports\1x\Gym.png" id="Gym" onclick="change_image('Gym')">
+    <img class="Icons" src="https://haykbaghdasarian.github.io/Gym.png" id="Gym" onclick="change_image('Gym')">
     <img class="Icons" src="https://haykbaghdasarian.github.io/Pharmacy.png" id="Pharmacy" onclick="change_image('Pharmacy')">
     <img class="Icons" src="https://haykbaghdasarian.github.io/Shop.png" id="Shop" onclick="change_image('Shop')">
 </div>
