--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <div class="UI">
 
-    <img src="https://haykbaghdasarian.github.io/Menu.png" class="left" alt="">
+    <img src="https://haykbaghdasarian.github.io/Menu.png" class="left" onclick="change_image('Menu') alt=">
 
-    <img src="https://haykbaghdasarian.github.io/Locate.png" class="right" alt="">
+    <img src="https://haykbaghdasarian.github.io/Locate.png" class="right" onclick="change_image('Locate') alt=">
 
     
 
