--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <div class="UI">
 
-    <img id="Menu" src="https://haykbaghdasarian.github.io/Menu.png" class="left" onclick="change_image('Menu')">
+    <!-- <img id="Menu" src="https://haykbaghdasarian.github.io/Menu.png" class="left" onclick="change_image('Menu')">
 
-    <img id="Locate" src="https://haykbaghdasarian.github.io/Locate.png" class="right" onclick="change_image('Locate')">
+    <img id="Locate" src="https://haykbaghdasarian.github.io/Locate.png" class="right" onclick="change_image('Locate')"> -->
 
     
 
