--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
     
 
-    <!-- <div class="bottom1">
-        <img src="https://image.freepik.com/free-vector/tablet-capsule-medicine-icon-illustration-healthcare-medical-icon-concept-isolated_138676-882.jpg" class="imgmgmg" alt="">
-        <h1 >Pharmacy</h1>
-        <p>Working Time: 14:00-18:00</p>
-        <p>Distance: 750m From You</p>
+    <div id="panel">
+        <img id="panel_image" src="https://image.freepik.com/free-vector/tablet-capsule-medicine-icon-illustration-healthcare-medical-icon-concept-isolated_138676-882.jpg" class="imgmgmg" alt="">
+        <h1 id="panel_name" >Pharmacy</h1>
+        <p  id="panel_wtime" >Working Time: 14:00-18:00</p>
+        <p id="panel_distance">Distance: 750m From You</p>
         <button class="getdirection"><h1>Get Direction</h1></button>
-    </div>  -->
+    </div> 
 
 <div class="container">
     <img class="Icons" id="Burger" src="https://haykbaghdasarian.github.io/Burger.png" onclick="change_image('Burger')">
@@ -43,7 +43,7 @@
 </div>
 
 
-
+-
 
 <script>
 
