--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
 
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
@@ -26,6 +26,15 @@
         <p  id="panel_wtime" >Working Time: 14:00-18:00</p>
         <p id="panel_distance">Distance: 750m From You</p>
         <button class="getdirection"><h1>Get Direction</h1></button>
+    </div> 
+
+    <div id="panel_up">
+
+        <form >
+            First name: <input type = "text" name = "first_name" />
+            <br>
+            Last name: <input type = "text" name = "last_name" />
+         </form>
     </div> 
 
 <div class="container">
