--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
     <div id="panel_up">
 
         <form >
-            First name: <input type = "text" name = "first_name" />
+            <input placeholder="Enter Name" type = "text" name = "first_name" />
             <br>
-            Last name: <input type = "text" name = "last_name" />
+            <input placeholder="Enter Surname" type = "text" name = "last_name" />
+            <br>
+            <select id="country" name="country">
+                <option value="australia"> <p>Australia</p> </option>
+                <option value="canada">Canada</option>
+                <option value="usa">USA</option>
+              </select>
          </form>
     </div> 
 
