--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
     <div id="panel_up">
 
         <form >
-            <input placeholder="Enter Name" type = "text" name = "first_name" />
+            <input id="name" placeholder=" Name" type = "text" name = "first_name" />
             <br>
-            <input placeholder="Enter Surname" type = "text" name = "last_name" />
+            <input id="workhour" placeholder=" Working Hours" type = "time" name = "last_name" />
+            <input id="workhour" placeholder=" Working Hours" type = "time" name = "last_name" />
             <br>
-            <select id="country" name="country">
+            <select id="name" name="country">
                 <option value="australia"> <p>Australia</p> </option>
                 <option value="canada">Canada</option>
                 <option value="usa">USA</option>
               </select>
+
+              
          </form>
     </div> 
 
