--- a/index.html
+++ b/index.html
@@ -28,23 +28,7 @@
         <button class="getdirection"><h1>Get Direction</h1></button>
     </div> 
 
-    <div id="panel_up">
 
-        <form >
-            <input id="name" placeholder=" Name" type = "text" name = "first_name" />
-            <br>
-            <input id="workhour" placeholder=" Working Hours" type = "time" name = "last_name" />
-            <input id="workhour" placeholder=" Working Hours" type = "time" name = "last_name" />
-            <br>
-            <select id="name" name="country">
-                <option value="australia"> <p>Australia</p> </option>
-                <option value="canada">Canada</option>
-                <option value="usa">USA</option>
-              </select>
-
-              
-         </form>
-    </div> 
 
 <div class="container">
     <img class="Icons" id="Burger" src="https://haykbaghdasarian.github.io/Burger.png" onclick="change_image('Burger')">
@@ -55,6 +39,7 @@
     <img class="Icons" src="https://haykbaghdasarian.github.io/Gym.png" id="Gym" onclick="change_image('Gym')">
     <img class="Icons" src="https://haykbaghdasarian.github.io/Pharmacy.png" id="Pharmacy" onclick="change_image('Pharmacy')">
     <img class="Icons" src="https://haykbaghdasarian.github.io/Shop.png" id="Shop" onclick="change_image('Shop')">
+    <img class="Icons" src="https://haykbaghdasarian.github.io/Shop.png" id="Shop" onclick="changelink()">
 </div>
 
 
