--- a/form.html
+++ b/form.html
@@ -60,17 +60,32 @@ background-color: rgb(246, 246, 244 ,0.5);
     z-index: 23;
     position: fixed;
     bottom: 0%;
-    margin: 5vw;
+
     width: 100vw;
+
+    
 
 
 }
 button {
-    width: 90vw;
+    width: 35vw;
+    margin-left: 10vw;
+    margin-bottom: 1vh;
+
+
     border-style: none;
   border-radius: 100px;
   color: white;
-  background-color: rgb(79, 79, 255);
+
+
+}
+.button1{
+    background-color:#ff4d4d;
+
+}
+
+.button2{
+    background-color: rgb(79, 79, 255);
 
 }
 .mapboxgl-ctrl-logo {
@@ -181,7 +196,8 @@ display: none;
                   <pre id="coordinates" class="coordinates"></pre>
              </form>
         </div> <div class="submitasd">
-            <button><h1>Submit</h1></button>
+            <button class="button1"><h1>Cancel</h1></button>
+            <button class="button2" ><h1>Submit</h1></button>
         </div>
 
         <div id='map'></div>
