--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
 
 <div class="container">
-    <img class="Icons" id="Engine" src="Engine.png" onclick="change_image('Engine')">
-    <img class="Icons" id = "Carwash" src="Carwash.png" onclick="change_image('Carwash')">
-    <img class="Icons" src="Service.png" id="Service" onclick="change_image('Service')">
-    <img class="Icons" id="Engine" src="Engine.png" onclick="change_image('Engine')">
-    <img class="Icons" id = "Carwash" src="Carwash.png" onclick="change_image('Carwash')">
-    <img class="Icons" src="Service.png" id="Service" onclick="change_image('Service')">
-    <img class="Icons" id="Engine" src="Engine.png" onclick="change_image('Engine')">
-    <img class="Icons" id = "Carwash" src="Carwash.png" onclick="change_image('Carwash')">
-    <img class="Icons" src="Service.png" id="Service" onclick="change_image('Service')">
+    <img class="Icons" id="Engine" src="https://haykbaghdasarian.github.io/Engine.png" onclick="change_image('Engine')">
+    <img class="Icons" id = "Carwash" src="https://haykbaghdasarian.github.io/Carwash.png" onclick="change_image('Carwash')">
+    <img class="Icons" src="https://haykbaghdasarian.github.io/Service.png" id="Service" onclick="change_image('Service')">
+    <img class="Icons" id="Engine" src="https://haykbaghdasarian.github.io/Engine.png" onclick="change_image('Engine')">
+    <img class="Icons" id = "Carwash" src="https://haykbaghdasarian.github.io/Carwash.png" onclick="change_image('Carwash')">
+    <img class="Icons" src="https://haykbaghdasarian.github.io/Service.png" id="Service" onclick="change_image('Service')">
+    <img class="Icons" id="Engine" src="https://haykbaghdasarian.github.io/Engine.png" onclick="change_image('Engine')">
+    <img class="Icons" id = "Carwash" src="https://haykbaghdasarian.github.io/Carwash.png" onclick="change_image('Carwash')">
+    <img class="Icons" src="https://haykbaghdasarian.github.io/Service.png" id="Service" onclick="change_image('Service')">
 
 </div>
 
