--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
-<script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
-
-<link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
-<link href='style.css' rel='stylesheet' />
-
+        <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
+        <link href='style.css' rel='stylesheet' />
     </head>
     <body>
 
@@ -14,7 +13,14 @@
 
 <div class="UI">
 
-
+<div id="panel">
+    <div class='swipline'></div>
+    <h2 id="title">Car wash</h2>
+    <h3 id = "name">Name-Hamoi mot</h3>
+    <h4 id="workhours">Working hours-09<sup>00</sup></h4>
+    <h4 id="price">Price-1000</h4>
+    <h4 id ="phone">Phone number:094777777</h4>
+</div>
 
 
 
@@ -49,9 +55,6 @@ var map = new mapboxgl.Map({
 
 
 </script>
-
-
-
     </body>
     <script src='function.js'></script>
 </html>
