--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
             <input type="hidden" name="EDP_DESCRIPTION" value="Order description">
             <input type="hidden" name="EDP_AMOUNT" value="10">
             <input type="hidden" name="EDP_BILL_NO" value="1806">
+            <input type="hidden" name="price" value="1000">
+            <input type="hidden" name="name" value="Hayk">
             <input type="submit" value="submit">
         </form>
     </body>
