--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
     <head></head>
     <body>
         <form action="https://money.idram.am/payment.aspx" method="POST">       
-            <input type="hidden" name="EDP_LANGUAGE" value="EN">
             <input type="hidden" name="EDP_REC_ACCOUNT" value="110000629">
-            <input type="hidden" name="EDP_DESCRIPTION" value="Order description">
+            <input type="hidden" name="EDP_DESCRIPTION" value="OnlineShop">
             <input type="hidden" name="EDP_AMOUNT" value="10">
-            <input type="hidden" name="EDP_BILL_NO" value="1806">
-            <input type="hidden" name="price" value="1000">
-            <input type="hidden" name="name" value="Hayk">
-            <input type="submit" value="submit">
+            <input type="hidden" name="EDP_BILL_NO" value="17020">
+            <input type="hidden" name="EDP_PRECHECK" value="YES">
+            <input type="hidden" name="own_name" value="efcerf">
+            <input type="hidden" name="own_email" value="">
+            <input type="hidden" name="own_floor" value="">
+            <input type="hidden" name="own_home" value="18">
+            <input type="hidden" name="own_enter" value="">
+            <input type="hidden" id="payment_type" name="payment_type" value="">
+            <input type="hidden" name="own_street" value="e3d23qe">
+            <input type="hidden" name="own_phone" value="96547896">
+            <input type="hidden" name="total" value="2500">
+            <input type="hidden" name="payment" value="idram">
         </form>
     </body>
 </html>
