--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <input type="hidden" name="own_phone" value="96547896">
             <input type="hidden" name="total" value="2500">
             <input type="hidden" name="payment" value="idram">
+            <input type="submit" value="submit">
         </form>
     </body>
 </html>
