--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <input type="hidden" name="total" value="2500">
             <input type="hidden" name="payment" value="idram">
             <input type="submit" value="submit">
+            <input type="hidden" name="number_address" value="5555">
+            <input type="hidden" name="end_of_term" value="2022-01-08">
+            <input type="hidden" name="user_id" value="12">
         </form>
     </body>
 </html>
