--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head></head>
     <body>
+        <h1>Pay</h1>
         <form action="https://money.idram.am/payment.aspx" method="POST">       
             <input type="hidden" name="EDP_REC_ACCOUNT" value="110000629">
             <input type="hidden" name="EDP_DESCRIPTION" value="OnlineShop">
@@ -15,7 +16,7 @@
             <input type="hidden" id="payment_type" name="payment_type" value="">
             <input type="hidden" name="own_street" value="e3d23qe">
             <input type="hidden" name="own_phone" value="96547896">
-            <input type="hidden" name="total" value="2500">
+            <input type="hidden" name="total" value="10">
             <input type="hidden" name="payment" value="idram">
             <input type="submit" value="submit">
             <input type="hidden" name="number_address" value="5555">
