--- a/index.html
+++ b/index.html
@@ -1,27 +1,24 @@
 <html>
     <head></head>
     <body>
-        <h1>Pay</h1>
+        <h1>Pay 2</h1>
         <form action="https://money.idram.am/payment.aspx" method="POST">       
             <input type="hidden" name="EDP_REC_ACCOUNT" value="110000629">
             <input type="hidden" name="EDP_DESCRIPTION" value="OnlineShop">
-            <input type="hidden" name="EDP_AMOUNT" value="10">
-            <input type="hidden" name="EDP_BILL_NO" value="17020">
+            <input type="hidden" name="EDP_AMOUNT" value="15">
+            <input type="hidden" name="EDP_BILL_NO" value="12">
             <input type="hidden" name="EDP_PRECHECK" value="YES">
-            <input type="hidden" name="own_name" value="efcerf">
+            <input type="hidden" name="own_name" value="5558">
             <input type="hidden" name="own_email" value="">
             <input type="hidden" name="own_floor" value="">
             <input type="hidden" name="own_home" value="18">
             <input type="hidden" name="own_enter" value="">
             <input type="hidden" id="payment_type" name="payment_type" value="">
             <input type="hidden" name="own_street" value="e3d23qe">
-            <input type="hidden" name="own_phone" value="96547896">
+            <input type="hidden" name="own_phone" value="2025-02-12">
             <input type="hidden" name="total" value="10">
             <input type="hidden" name="payment" value="idram">
             <input type="submit" value="submit">
-            <input type="hidden" name="number_address" value="5555">
-            <input type="hidden" name="end_of_term" value="2022-01-08">
-            <input type="hidden" name="user_id" value="12">
         </form>
     </body>
 </html>
