--- a/index.html
+++ b/index.html
@@ -1,24 +1,6 @@
 <html>
     <head></head>
     <body>
-        <h1>Pay 3</h1>
-        <form action="https://money.idram.am/payment.aspx" method="POST">       
-            <input type="hidden" name="EDP_REC_ACCOUNT" value="110000629">
-            <input type="hidden" name="EDP_DESCRIPTION" value="OnlineShop">
-            <input type="hidden" name="EDP_AMOUNT" value="10">
-            <input type="hidden" name="EDP_BILL_NO" value="15">
-            <input type="hidden" name="EDP_PRECHECK" value="YES">
-            <input type="hidden" name="own_name" value="5558">
-            <input type="hidden" name="own_email" value="">
-            <input type="hidden" name="own_floor" value="">
-            <input type="hidden" name="own_home" value="18">
-            <input type="hidden" name="own_enter" value="">
-            <input type="hidden" id="payment_type" name="payment_type" value="">
-            <input type="hidden" name="own_street" value="e3d23qe">
-            <input type="hidden" name="own_phone" value="2025-02-12">
-            <input type="hidden" name="total" value="10">
-            <input type="hidden" name="payment" value="idram">
-            <input type="submit" value="submit">
-        </form>
+        <h1>Game</h1>
     </body>
 </html>
