--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <script src="game.js"></script>
       <button id="jump" style="position: fixed; display: block; width: 10%; height: 10%; top: 0; left: 0; right: 0; bottom: 0; background-color: rgb(255 0 0); z-index: 2; cursor: pointer;">asdasd</button>
       <button id="right" style="position: fixed; display: block; width: 10%; height: 10%;   right: 0; bottom: 0; background-color: rgb(255 0 0); z-index: 2; cursor: pointer;">asdasd</button>
+      <button id="left" style="position: fixed; display: block; width: 10%; height: 10%;   left: 0; bottom: 0; background-color: rgb(255 0 0); z-index: 2; cursor: pointer;">asdasd</button>
 
   </body>
 </html>
