--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
       <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
       <script src="game.js"></script>
-      <button id="jump" style="position: fixed; display: block; width: 10%; height: 10%; bottom: 10%; left: 0;  background-color: rgb(255 0 0); z-index: 2; cursor: pointer;"></button>
-      <button id="right" style="position: fixed; display: block; width: 10%; height: 10%;   right: 5; bottom: 10%; background-color: rgb(255 0 0); z-index: 2; cursor: pointer;"></button>
-      <button id="left" style="position: fixed; display: block; width: 10%; height: 10%;   right: 12.5%; bottom: 10%; background-color: rgb(255 0 0); z-index: 2; cursor: pointer;"></button>
+      <div id="jump" style="position: fixed; display: block; width: 10%; height: 10%; bottom: 10%; left: 0;   z-index: 2; cursor: pointer;"> <img width=100%,  src="https://i.imgur.com/uFIdUYr.png" ; /></div>
+      <div id="right" style="position: fixed; display: block; width: 10%; height: 10%;   right: 5; bottom: 10%;  z-index: 2; cursor: pointer;"> <img width=100%,  src="https://i.imgur.com/OVBTHNQ.png" ; /></div>
+      <div id="left" style="position: fixed; display: block; width: 10%; height: 10%;   right: 12.5%; bottom: 10%; z-index: 2; cursor: pointer;"><img width=100%, src="https://i.imgur.com/fIHsBbJ.png" /></div>
 
   </body>
 </html>
