--- a/index.html
+++ b/index.html
@@ -6,14 +6,31 @@
       body {
         margin: 0;
         overflow: hidden;
+
       }
+        .selectDisable {
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -o-user-select: none;
+            user-select: none;
+        }
+
+        img {
+            -drag: none;
+            user-select: none;
+            -moz-user-select: none;
+            -webkit-user-drag: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+        }
     </style>
   </head>
   <body>
       <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
       <script src="game.js"></script>
-      <div id="jump" style="position: fixed; display: block; width: 10%; height: 10%; bottom: 10%; left: 0;   z-index: 2; cursor: pointer;"> <img width=100%,  src="https://i.imgur.com/uFIdUYr.png" ; /></div>
-      <div id="right" style="position: fixed; display: block; width: 10%; height: 10%;   right: 5; bottom: 10%;  z-index: 2; cursor: pointer;"> <img width=100%,  src="https://i.imgur.com/OVBTHNQ.png" ; /></div>
+      <div id="jump" style="position: fixed; display: block; width: 10%; height: 10%; bottom: 10%; left: 0;   z-index: 2; cursor: pointer;"> <img width=100%,  src="https://i.imgur.com/uFIdUYr.png"  /></div>
+      <div id="right" style="position: fixed; display: block; width: 10%; height: 10%;   right: 5; bottom: 10%;  z-index: 2; cursor: pointer; "><img width=100%, src="https://i.imgur.com/OVBTHNQ.png" /> </div>
       <div id="left" style="position: fixed; display: block; width: 10%; height: 10%;   right: 12.5%; bottom: 10%; z-index: 2; cursor: pointer;"><img width=100%, src="https://i.imgur.com/fIHsBbJ.png" /></div>
 
   </body>
