--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         overflow: hidden;
 
       }
-        .selectDisable {
+        h1 {
             -webkit-user-select: none;
             -khtml-user-select: none;
             -moz-user-select: none;
@@ -29,9 +29,9 @@
   <body>
       <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
       <script src="game.js"></script>
-      <div id="jump" style="position: fixed; display: block; width: 10%; height: 10%; bottom: 10%; left: 0;   z-index: 2; cursor: pointer;"> <img width=100%,  src="https://i.imgur.com/uFIdUYr.png"  /></div>
-      <div id="right" style="position: fixed; display: block; width: 10%; height: 10%;   right: 5; bottom: 10%;  z-index: 2; cursor: pointer; "><img width=100%, src="https://i.imgur.com/OVBTHNQ.png" /> </div>
-      <div id="left" style="position: fixed; display: block; width: 10%; height: 10%;   right: 12.5%; bottom: 10%; z-index: 2; cursor: pointer;"><img width=100%, src="https://i.imgur.com/fIHsBbJ.png" /></div>
+      <div id="jump" style="position: fixed; display: block; width: 10%; height: 10%; bottom: 10%; left: 0; z-index: 2; cursor: pointer; background: #fca120; text-align: center; border-radius: 20px"> <h1>Jump</h1></div>
+      <div id="right" style="position: fixed; display: block; width: 10%; height: 10%; right: 5; bottom: 10%; z-index: 2; cursor: pointer; background: #fca120; text-align: center; border-radius: 20px"><h1>Right</h1></div>
+      <div id="left" style="position: fixed; display: block; width: 10%; height: 10%; right: 12.5%; bottom: 10%; z-index: 2; cursor: pointer; background: #fca120; text-align: center; border-radius: 20px"><h1>Left</h1></div>
 
   </body>
 </html>
