--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         }
     </style>
   </head>
-  <body>
+  <body id="body">
       <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
       <script src="game.js"></script>
-      <div id="jump" style="position: fixed; display: block; width: 10%; height: 10%; bottom: 10%; left: 0; z-index: 2; cursor: pointer; background: #fca120; text-align: center; border-radius: 20px"> <h1>Jump</h1></div>
-      <div id="right" style="position: fixed; display: block; width: 10%; height: 10%; right: 5; bottom: 10%; z-index: 2; cursor: pointer; background: #fca120; text-align: center; border-radius: 20px"><h1>Right</h1></div>
-      <div id="left" style="position: fixed; display: block; width: 10%; height: 10%; right: 12.5%; bottom: 10%; z-index: 2; cursor: pointer; background: #fca120; text-align: center; border-radius: 20px"><h1>Left</h1></div>
+      <div id="jump" style="position: fixed; display: block; width: 20%; height: 10%; bottom: 10%; left: 0; z-index: 2; cursor: pointer; background: #fca120; text-align: center; border-radius: 20px"> <h1>Jump</h1></div>
+      <div id="right" style="position: fixed; display: block; width: 20%; height: 10%; right: 5; bottom: 10%; z-index: 2; cursor: pointer; background: #fca120; text-align: center; border-radius: 20px"><h1>Right</h1></div>
+      <div id="left" style="position: fixed; display: block; width: 20%; height: 10%; right: 22.5%; bottom: 10%; z-index: 2; cursor: pointer; background: #fca120; text-align: center; border-radius: 20px"><h1>Left</h1></div>
 
   </body>
 </html>
