--- a/index.html
+++ b/index.html
@@ -2,36 +2,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Mario Kaboom.js</title>
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-
-      }
-        h1 {
-            -webkit-user-select: none;
-            -khtml-user-select: none;
-            -moz-user-select: none;
-            -o-user-select: none;
-            user-select: none;
-        }
-
-        img {
-            -drag: none;
-            user-select: none;
-            -moz-user-select: none;
-            -webkit-user-drag: none;
-            -webkit-user-select: none;
-            -ms-user-select: none;
-        }
-    </style>
   </head>
-  <body id="body">
-      <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
-      <script src="game.js"></script>
-      <div id="jump" style="position: fixed; display: block; width: 20%; height: 10%; bottom: 10%; left: 0; z-index: 2; cursor: pointer; background: #fca120; text-align: center; border-radius: 20px"> <h1>Jump</h1></div>
-      <div id="right" style="position: fixed; display: block; width: 20%; height: 10%; right: 5; bottom: 10%; z-index: 2; cursor: pointer; background: #fca120; text-align: center; border-radius: 20px"><h1>Right</h1></div>
-      <div id="left" style="position: fixed; display: block; width: 20%; height: 10%; right: 22.5%; bottom: 10%; z-index: 2; cursor: pointer; background: #fca120; text-align: center; border-radius: 20px"><h1>Left</h1></div>
-
+  <body>
+      <a href="rawbt:Добрый,%20день!%0A%0A"> Print </a>
   </body>
 </html>
