--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Mario Kaboom.js</title>
   </head>
   <body>
-      <a href="rawbt:base64,0JrQtNC60LTQutC00LrRgdC80YHQvNC00LzQtA=="> Print 1 </a>
+      <a href="rawbt:russian,Привет"> Print 1 </a>
   </body>
 </html>
