--- a/index.html
+++ b/index.html
@@ -106,6 +106,19 @@
         
     </section>
 
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.13.1/xlsx.full.min.js"></script> 
+<script>
+    function ExportData(data)
+    {
+        filename='reports.xlsx';
+        var ws = XLSX.utils.json_to_sheet(data);
+        var wb = XLSX.utils.book_new();
+        XLSX.utils.book_append_sheet(wb, ws, "Requests");
+        XLSX.writeFile(wb,filename);
+     }
+     
+</script>
+
     <script src="script.js"></script>
 
     <script type="module">
@@ -168,23 +181,13 @@ function startCSVDownload() {
         if(element.delay == true){
             comment += ' Задержка '
         }
-        var list = element.ID + ',' + element.Name + ',' + element.Place + ',' + element.USD.toString() + ',' + element.Payment.toString() + ',' +  element.Debt.toString() + ',' + element.Phone + ',' + element.Transport + ',' + comment + ',' + element.DateTime.toDate();
+        var list = {"Track_number" : element.ID,  "Получатель" : element.Name,  "Кол-во" : element.Place,  "К_оплате" : element.USD.toString(),  "Оплата" : element.Payment.toString(),  "Долг" : element.Debt.toString(),  "Телефон" : element.Phone,  "Фура" : element.Transport,  "Комментарий" : comment,  "Дата" : element.DateTime.toDate() }
         body.push(list)
     });
 
-    const csv = [headers, ...body].join('\n')
 
-    const blob = new Blob([csv], { type: "text/csv;charset=utf-8" });
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement('a');
-    a.download = 'requests.csv'
-    a.href = url
-    document.body.appendChild(a)
+    ExportData(body)
 
-    a.click()
-
-    a.remove()
-    URL.revokeObjectURL(url)
 }
 
 const firebaseConfig = {
