--- a/qaq.html
+++ b/qaq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Generate PDF from HTML using html to pdf library</title>
+    <title>Sublimagia Android</title>
 </head>
 
 <body>
@@ -29,6 +29,7 @@
         const app = initializeApp(firebaseConfig);
         const analytics = getAnalytics(app);
         logEvent(analytics, 'App launched');
+        window.location.replace("https://www.sublimagia.ru");
       </script>
 </body>
 </html>
