--- a/testest.html
+++ b/testest.html
@@ -5,10 +5,10 @@
 </head>
 
 <body>
-    <button id="btn" >Test</button>
+    <button id="btn" >Test 2</button>
     <script type="module">
         document.getElementById('btn').addEventListener("click", function() {
-          ReactNativeWebView.postMessage('barev');
+          ReactNativeWebView.postMessage('{"Title": "Title", "URL": "https://ftp1.puper.one/files/music/source/fe7f10b770eabbca44d9805dc87df49f.mp3", "TrackId": "id", "Artist": "Artist", "Artwork": "https://ftp1.puper.one/files/music/screen/240x240/fe7f10b770eabbca44d9805dc87df49f.jpg"}');
         });
       </script>
 </body>
