--- a/testest.html
+++ b/testest.html
@@ -8,7 +8,7 @@
     <button id="btn" >Test 2</button>
     <script type="module">
         document.getElementById('btn').addEventListener("click", function() {
-          ReactNativeWebView.postMessage('{"Title": "Title", "URL": "https://ftp1.puper.one/files/music/source/fe7f10b770eabbca44d9805dc87df49f.mp3", "TrackId": "id", "Artist": "Artist", "Artwork": "https://ftp1.puper.one/files/music/screen/240x240/fe7f10b770eabbca44d9805dc87df49f.jpg"}');
+          ReactNativeWebView.postMessage('{"Title": "Между девятин (Истома)", "URL":"https://ftp1.puper.one/files/music/source/176d5480c98301c62298d4530b863e4c.mp3", "TrackId":"1352", "Artist":"@TurTKuL_CluB_BaSs", "Artwork":"https://ftp1.puper.one/files/music/screen/176d5480c98301c62298d4530b863e4c.jpg"}');
         });
       </script>
 </body>
