--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                 <input class="datetime" id="end-date" type="date">
                 <select class="select" name="Type" id="Type">
                     <option value="all">Все</option>
-                    <option value="Z">Барыс</option>
-                    <option value="S">Адем</option>
+                    <option value="S">Барыс</option>
+                    <option value="Z">Адем</option>
                   </select>
                 <button class="filter">
                     <i  class='bx bx-filter-alt icon' ></i>
