--- a/epub.html
+++ b/epub.html
@@ -49,6 +49,7 @@
         item.innerHTML = item.innerText.split(' ').map(l => `<span>${l}</span>`).join(' ');
         item.addEventListener("click", e => {
             alert(e.target.innerText);
+            ReactNativeWebView.postMessage('{"word": "' + e.target.innerText + '"}')
         })
       });
 
