--- a/epub.html
+++ b/epub.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>EPUB.js Spreads Example</title>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js"></script>
