--- a/epub.html
+++ b/epub.html
@@ -61,6 +61,12 @@
       }if ((e.keyCode || e.which) == 39) {
         rendition.next();
     }}, false);
+
+    this.rendition.themes.default({
+      'body': {
+        'color': 'white',
+      }
+    });
     
   </script>
 
