--- a/epub.html
+++ b/epub.html
@@ -67,6 +67,10 @@
         'color': 'white',
       }
     });
+
+    document.addEventListener("message", function(data) {
+      alert(data)
+    });
     
   </script>
 
